# KHG-Kit

./: '  .clangd  .gitignore  .timesheet  .timesheetdb  :w  CMakeLists.txt  CODEOWNERS  LICENSE.txt  README.md  [  build.bat  build.py  build.sh  build_win.sh  notes.txt  package-lock.json  timesheet.py
common/engine/khg_aud/: CMakeLists.txt
common/engine/khg_aud/include/khg_aud/: audio_buffer.h  audio_frame.h  audio_stream_management.h  callbacks.h  sound_loading.h  sound_management.h  utils.h
common/engine/khg_aud/src/: audio_buffer.c  audio_frame.c  audio_stream_management.c  callbacks.c  device_management.c  music_management.c  sound_loading.c  sound_management.c  utils.c
engine/khg2d/: CMakeLists.txt
engine/khg2d/include/khg2d/: camera.h  font.h  framebuffer.h  particles.h  renderer2d.h  shader.h  texture.h  textureAtlas.h  utils.h
engine/khg2d/src/: camera.c  font.c  framebuffer.c  particles.c  renderer2d.c  shader.c  texture.c  textureAtlas.c  utils.c
engine/khg_2d/: CMakeLists.txt
engine/khg_2d/include/khg_2d/: camera.h  font.h  framebuffer.h  particles.h  renderer_2d.h  renderer_2d_buffer_type.h  shader.h  texture.h  texture_atlas.h  utils.h
engine/khg_2d/src/: camera.c  font.c  framebuffer.c  particles.c  renderer_2d.c  shader.c  texture.c  texture_atlas.c  utils.c
engine/khg_env/: CMakeLists.txt
engine/khg_env/include/khg_env/: error_report.h  game_scripting.h  input.h  other.h
engine/khg_env/src/: error_report.c  game_scripting.c  input.c  other.c
engine/khg_gfx/: CMakeLists.txt
engine/khg_gfx/include/khg_gfx/: elements.h  events.h  font.h  internal.h  texture.h  ui.h
engine/khg_gfx/src/: elements.c  events.c  font.c  internal.c  texture.c  ui.c
engine/khg_math/: CMakeLists.txt
engine/khg_math/include/khg_math/: mat2.h  mat3.h  mat4.h  math.h  quat.h  vec2.h  vec3.h
engine/khg_math/src/: mat2.c  mat3.c  mat4.c  math.c  quat.c  vec2.c  vec3.c  vec4.c
engine/khg_net/: CMakeLists.txt
engine/khg_net/include/khg_net/: callbacks.h  list.h  net.h  protocol.h  time.h  types.h  unix.h  utils.h  win32.h
engine/khg_net/src/: callbacks.c  compress.c  host.c  list.c  packet.c  peer.c  protocol.c  unix.c  win32.c
engine/khg_phy/: CMakeLists.txt
engine/khg_phy/include/chipmunk/: arbiter.h  bb.h  body.h  constraint.h  damped_rotary_spring.h  gear_joint.h  groove_joint.h  hasty_space.h  march.h  phy.h  phy_private.h  phy_structs.h  phy_types.h  phy_unsafe.h  pin_joint.h  pivot_joint.h  poly_shape.h  polyline.h  ratchet_joint.h  robust.h  rotary_limit_joint.h  shape.h  simple_motor.h  slide_joint.h  space.h  spatial_index.h  transform.h  vect.h
engine/khg_phy/include/khg_phy/: aabb.h  allocate.h  arbiter.h  base.h  bb.h  body.h  broadphase.h  bvh.h  collision.h  constants.h  constraint.h  contact.h  core.h  damped_rotary_spring.h  damped_spring.h  data.h  debug.h  gear_joint.h  groove_joint.h  hasty_space.h  id.h  internal.h  march.h  material.h  math.h  math_functions.h  module.h  module_internal.h  motor.h  narrowphase.h  novaphysics.h  phy.h  phy_private.h  phy_structs.h  phy_types.h  phy_unsafe.h  physac.h  pin_joint.h  pivot_joint.h  poly_shape.h  (+17 more)
engine/khg_phy/include/khg_phy/constraints/: constraint.h  contact_constraint.h  distance_constraint.h  hinge_constraint.h  spline_constraint.h
engine/khg_phy/include/khg_phy/core/: array.h  hashmap.h  phy_pool.h  pool.h
engine/khg_phy/src/: aabb.c  allocate.c  arbiter.c  array.c  bb_tree.c  body.c  broadphase.c  bvh.c  chipmunk.c  collision.c  constraint.c  contact.c  cpArbiter.c  cpArray.c  cpBBTree.c  cpBody.c  cpCollision.c  cpConstraint.c  cpDampedRotarySpring.c  cpDampedSpring.c  cpGearJoint.c  cpGrooveJoint.c  cpHashSet.c  cpHastySpace.c  cpMarch.c  cpPinJoint.c  cpPivotJoint.c  cpPolyShape.c  cpPolyline.c  cpRatchetJoint.c  cpRobust.c  cpRotaryLimitJoint.c  cpShape.c  cpSimpleMotor.c  cpSlideJoint.c  cpSpace.c  cpSpaceComponent.c  cpSpaceDebug.c  cpSpaceHash.c  cpSpaceQuery.c  (+36 more)
engine/khg_phy/src/constraints/: constraint.c  contact_constraint.c  distance_constraint.c  hinge_constraint.c  spline_constraint.c
engine/khg_phy/src/core/: array.c  error.c  hashmap.c  phy_array.c  phy_hashmap.c  phy_pool.c  pool.c
engine/khg_ui/: CMakeLists.txt
engine/khg_ui/include/khg_ui/: box.h  data.h  elements.h  events.h  frame.h  glui.h  hash_utils.h  internal.h  khg_ui.h  menu_stack_hash_table.h  renderer_ui.h  texture.h  ui.h  widget.h  widget_hash_table.h
engine/khg_ui/src/: box.c  elements.c  events.c  frame.c  glui.c  hash_utils.c  internal.c  menu_stack_hash_table.c  renderer_ui.c  texture.c  ui.c  widget_hash_table.c
engine/khg_utl/: CMakeLists.txt
engine/khg_utl/include/khg_utl/: algorithm.h  config.h  crypto.h  csv.h  easing.h  encoding.h  error_func.h  file_reader.h  file_writer.h  json.h  map.h  matrix.h  postgres.h  queue.h  regex.h  secret.h  string.h  tcp.h  vector.h
engine/khg_utl/src/: algorithm.c  array.c  config.c  crypto.c  csv.c  easing.c  encoding.c  error_func.c  file_reader.c  file_writer.c  json.c  map.c  matrix.c  postgres.c  queue.c  regex.c  secret.c  string.c  tcp.c  vector.c
engine/khgaudio/: CMakeLists.txt
engine/khgaudio/include/khgaudio/: audio_buffer.h  audio_stream_management.h  deviceManagement.h  device_management.h  loading.h  music_management.h  sound_loading.h  sound_management.h  utils.h
engine/khgaudio/src/: audio_buffer.c  audio_frame.c  audio_stream_management.c  callbacks.c  deviceManagement.c  device_management.c  loading.c  music_management.c  sound_loading.c  sound_management.c  utils.c
engine/khgenv/: CMakeLists.txt
engine/khgenv/include/khgenv/: errorReport.h  gameScripting.h  game_scripting.h  input.h  other.h
engine/khgenv/src/: errorReport.c  error_report.c  gameScripting.c  game_scripting.c  input.c  other.c
engine/khgmath/: CMakeLists.txt
engine/khgmath/include/khgmath/: mat3.h  mat4.h  math.h  minmax.h  quat.h  vec2.h  vec3.h  vec4.h
engine/khgmath/src/: mat3.c  mat4.c  math.c  quat.c  vec2.c  vec3.c  vec4.c
include/: client.h  game.h  game_manager.h  letterbox.h  net.h  net_process.h  server.h
res/: g_data.txt
(+7539 files in other folders)
