cmake_minimum_required(VERSION 3.5)
project(khg2d)
add_library(khg2d)
file(GLOB_RECURSE sources "src/*.c")
target_sources(khg2d PRIVATE "${sources}")
target_include_directories(khg2d PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_link_libraries(khg2d PUBLIC khgutils khgmath stb_image stb_truetype glad)
