cmake_minimum_required(VERSION 3.5)
project(khg_2d)
add_library(khg_2d)
file(GLOB_RECURSE sources "src/*.c")
target_sources(khg_2d PRIVATE "${sources}")
target_include_directories(khg_2d PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_link_libraries(khg_2d PUBLIC khg_utils khg_math stb_image stb_truetype glad)
