cmake_minimum_required(VERSION 3.5)
project(khg_ui)
add_library(khg_ui)
file(GLOB_RECURSE sources "src/*.c")
target_sources(khg_ui PRIVATE "${sources}")
target_include_directories(khg_ui PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_link_libraries(khg_ui PUBLIC glad glfw stb_image stb_image_resize stb_truetype libclipboard khg_math)
